language/move-lang/tests/move_check/expansion/duplicate_field_pack.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_field_pack.move:4:9
  │
4 │         S { f: 0, f: 0 };
  │         ^^^^^^^^^^^^^^^^
  │         │   │     │
  │         │   │     Duplicate argument given for field 'f'
  │         │   Field previously defined here
  │         Invalid construction

